@@ -7081,8 +7081,7 @@ Return t if highlighting is successful."
       (setcdr w3m-goto-anchor-hist nil)))
   (if (< arg 0)
       (w3m-previous-anchor (- arg))
-    (let ((st (point))
-	  pos)
+    (let (pos)
       (while (> arg 0)
 	(unless (w3m-goto-next-anchor)
 	  (setq w3m-goto-anchor-hist nil)
@@ -7132,8 +7131,7 @@ Return t if highlighting is successful."
       (setcdr w3m-goto-anchor-hist nil)))
   (if (< arg 0)
       (w3m-next-anchor (- arg))
-    (let ((st (point))
-	  pos)
+    (let (pos)
       (while (> arg 0)
 	(unless (w3m-goto-previous-anchor)
 	  (setq w3m-goto-anchor-hist nil)
@@ -7175,17 +7173,16 @@ Return t if highlighting is successful."
       (setcdr w3m-goto-anchor-hist nil)))
   (if (< arg 0)
       (w3m-previous-form (- arg))
-    (let ((st (point)))
-      (while (> arg 0)
-	(unless (w3m-goto-next-form)
-	  ;; Make a search from the beginning of the buffer.
-	  (setq w3m-goto-anchor-hist nil)
-	  (goto-char (point-min))
-	  (w3m-goto-next-form))
-	(setq arg (1- arg))
-	(if (member (w3m-action (point)) w3m-goto-anchor-hist)
-	    (setq arg (1+ arg))
-	  (push (w3m-action (point)) w3m-goto-anchor-hist))))
+    (while (> arg 0)
+      (unless (w3m-goto-next-form)
+	;; Make a search from the beginning of the buffer.
+	(setq w3m-goto-anchor-hist nil)
+	(goto-char (point-min))
+	(w3m-goto-next-form))
+      (setq arg (1- arg))
+      (if (member (w3m-action (point)) w3m-goto-anchor-hist)
+	  (setq arg (1+ arg))
+	(push (w3m-action (point)) w3m-goto-anchor-hist)))
     (w3m-horizontal-on-screen)
     (w3m-print-this-url)))
 
@@ -7214,17 +7211,16 @@ Return t if highlighting is successful."
       (setcdr w3m-goto-anchor-hist nil)))
   (if (< arg 0)
       (w3m-next-form (- arg))
-    (let ((st (point)))
-      (while (> arg 0)
-	(unless (w3m-goto-previous-form)
-	  ;; search from the end of the buffer
-	  (setq w3m-goto-anchor-hist nil)
-	  (goto-char (point-max))
-	  (w3m-goto-previous-form))
-	(setq arg (1- arg))
-	(if (member (w3m-action (point)) w3m-goto-anchor-hist)
-	    (setq arg (1+ arg))
-	  (push (w3m-action (point)) w3m-goto-anchor-hist))))
+    (while (> arg 0)
+      (unless (w3m-goto-previous-form)
+	;; search from the end of the buffer
+	(setq w3m-goto-anchor-hist nil)
+	(goto-char (point-max))
+	(w3m-goto-previous-form))
+      (setq arg (1- arg))
+      (if (member (w3m-action (point)) w3m-goto-anchor-hist)
+	  (setq arg (1+ arg))
+	(push (w3m-action (point)) w3m-goto-anchor-hist)))
     (w3m-horizontal-on-screen)
     (w3m-print-this-url)))
 
@@ -7253,17 +7249,16 @@ Return t if highlighting is successful."
       (setcdr w3m-goto-anchor-hist nil)))
   (if (< arg 0)
       (w3m-previous-image (- arg))
-    (let ((st (point)))
-      (while (> arg 0)
-	(unless (w3m-goto-next-image)
-	  ;; Make a search for an image from the beginning of the buffer.
-	  (setq w3m-goto-anchor-hist nil)
-	  (goto-char (point-min))
-	  (w3m-goto-next-image))
-	(setq arg (1- arg))
-	(if (member (w3m-image (point)) w3m-goto-anchor-hist)
-	    (setq arg (1+ arg))
-	  (push (w3m-image (point)) w3m-goto-anchor-hist))))
+    (while (> arg 0)
+      (unless (w3m-goto-next-image)
+	;; Make a search for an image from the beginning of the buffer.
+	(setq w3m-goto-anchor-hist nil)
+	(goto-char (point-min))
+	(w3m-goto-next-image))
+      (setq arg (1- arg))
+      (if (member (w3m-image (point)) w3m-goto-anchor-hist)
+	  (setq arg (1+ arg))
+	(push (w3m-image (point)) w3m-goto-anchor-hist)))
     (w3m-horizontal-on-screen)
     (w3m-print-this-url)))
 
@@ -7292,17 +7287,16 @@ Return t if highlighting is successful."
       (setcdr w3m-goto-anchor-hist nil)))
   (if (< arg 0)
       (w3m-next-image (- arg))
-    (let ((st (point)))
-      (while (> arg 0)
-	(unless (w3m-goto-previous-image)
-	  ;; Make a search from the end of the buffer.
-	  (setq w3m-goto-anchor-hist nil)
-	  (goto-char (point-max))
-	  (w3m-goto-previous-image))
-	(setq arg (1- arg))
-	(if (member (w3m-image (point)) w3m-goto-anchor-hist)
-	    (setq arg (1+ arg))
-	  (push (w3m-image (point)) w3m-goto-anchor-hist))))
+    (while (> arg 0)
+      (unless (w3m-goto-previous-image)
+	;; Make a search from the end of the buffer.
+	(setq w3m-goto-anchor-hist nil)
+	(goto-char (point-max))
+	(w3m-goto-previous-image))
+      (setq arg (1- arg))
+      (if (member (w3m-image (point)) w3m-goto-anchor-hist)
+	  (setq arg (1+ arg))
+	(push (w3m-image (point)) w3m-goto-anchor-hist)))
     (w3m-horizontal-on-screen)
     (w3m-print-this-url)))
 
